Controller support + small perfomance optimization
Added a controller support, so now you can use analog stick for a more slowed down movement. Less Drawing calls are made, so perfomance has been made.

--- a/Escape the Machine expansion.vcxproj.filters
+++ b/Escape the Machine expansion.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClInclude Include="src\ApiKey.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\olcPGEX_Gamepad.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
