--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-#Directories
-.vs/
-build/
-external/mwaWebApiClient/.vscode/
-external/mwaWebApiClient/bin/
-external/mwaWebApiClient/obj/
-external/mwaWebApiClient/vs2019/.vs/
-external/mwaWebApiClient/vs2019/bin/
-
-#Files
-*.user
-src/*.o
-src/ApiKey.h
+build
+linux-build
+emscripten-build
+nmake-build
+mingw-build
+vs-build
+.vscode
+.cache
