--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: emscripten
+          name: Escape-the-Machine.Web
           path: build/bin/*
 
   ubuntu:
@@ -77,7 +77,7 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ubuntu
+          name: Escape-the-Machine.Ubuntu
           path: build/bin/*
   windows:
     name: Windows
@@ -97,6 +97,6 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: windows
+          name: Escape-the-Machine.Windows
           path: build/bin/*
       
