disable terminal in windows builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,7 +90,7 @@ jobs:
       
       - name: Build
         run: |
-          cmake . -B build
+          cmake -DHAS_TERMINAL=OFF . -B build 
           cmake --build build --config=Release
         shell: pwsh
 
